apps/base/core/portainer/portainer-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600" # Recommendation for Websockets
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600" # Recommendation for Websockets
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    kubernetes.io/ingress.class: public
    cert-manager.io/cluster-issuer: letsencrypt-staging
    flame.pawelmalak/type: application
    flame.pawelmalak/name: Portainer
    flame.pawelmalak/url: https://example.com
    flame.pawelmalak/icon: https://api.charmhub.io/api/v1/media/download/charm_Owpj9CsDEMZwVtup3ZTxxs0FtyvDqb2o_icon_5cef79c2d18f67464f39c8f2cf2d7ebb815b0071f04d3ffbb94f49fddd3ab666.png
  name: portainer-ingress
  namespace: portainer
spec:
  tls:
  - hosts:
    - "example.com"
    secretName: portainer-tls
  rules:
  - host: example.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: portainer
            port:
              number: 9443
